<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="audio_will_be_initialized">Audio will be initialized in about 15 seconds, please stop any running video or audio playback before then</string>
    <string name="audio_initialized">Audio initialized</string>
    <string name="action_import_settings">Import Settings</string>
    <string name="action_new_connection">Add New Connection</string>
    <string name="action_edit_default_settings">Edit Default Settings</string>
    <string name="action_export_settings">Export Settings</string>
    <string name="action_delete_connection">Delete Connection</string>
    <string name="action_rate_or_share_app">Get Help, Rate, Share</string>
    <string name="opaque_app_name">Opaque</string>
    <string name="opaque_app_name_beta">Opaque Beta</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="audio">Audio</string>
    <string name="auto_rotation">Screen rotation while connected</string>
    <string name="auto_request_new_res">Sync remote to display resolution</string>
    <string name="custom_ca_subject">Optional Cert Subject. Not needed if cert CN matches hostname</string>
    <string name="custom_ca_import">Alternatively, enter full path to your CA and tap Import</string>
    <string name="custom_ca_paste">Paste (if not importing) the CA here</string>
    <string name="ca_ovirt_use_custom">Custom RHEV/oVirt CA</string>
    <string name="ca_spice_use_ovirt">Use RHEV/oVirt CA for SPICE</string>
    <string name="ca_ovirt_manage">Manage RHEV/oVirt CA</string>
    <string name="ca_spice_manage">Manage SPICE CA</string>
    <string name="ca_file_not_found">File not found. Please enter a valid file name in the text field (e.g. /sdcard/ca.crt).</string>
    <string name="ca_file_error_reading">Error reading CA file. Please ensure it is readable.</string>
    <string name="ca_new_or_changed">New or changed server certificate</string>
    <string name="connection_type_text">Virtualization Environment (RHEV/oVirt or Proxmox)</string>
    <string name="connection_type_ovirt">oVirt/RHEV</string>
    <string name="connection_type_pve">Proxmox VE</string>
    <string-array name="connection_types">
        <item>@string/connection_type_ovirt</item>
        <item>@string/connection_type_pve</item>
    </string-array>
    <string name="connection_setup_vm_name">Virtual machine name (optional)</string>
    <string name="connection_setup_host_name">Server Address</string>
    <string name="connection_setup_user">User@Domain</string>
    <string name="connection_setup_password">Password</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_password_auth_failed">Authentication failed. Please re-enter your credentials.</string>
    <string name="enter_otp_code">Please enter OTP code</string>
    <string name="hide_toolbar">Hide toolbar</string>
    <string name="manage_custom_ca_title">Manage custom CA</string>
    <string name="save_button">Save</string>
    <string name="select_vm_title">Select Virtual Machine</string>
    <string name="vv_file_not_found">The .vv file was not found!</string>
    <string name="vv_file_error">The .vv file is either missing or corrupt!</string>
    <string name="info_cert">Do you accept this new or changed host certificate?\n\nFingerprints:\nMD5: %1$s\nSHA1: %2$s\nSHA256: %3$s\n\nIssued to: %4$s\nIssued by: %5$s\n\nValid from: %6$s\nValid until: %7$s\n</string>
    <string name="toggle_keyboard">Toggle Keyboard</string>
    <string name="show_keyboard">Show Keyboard</string>
    <string name="input_method_help">Input Method Help</string>
    <string name="ok">Ok</string>
    <string name="input_methods">Input Method</string>
    <string name="input_method_help_text">"
In any Input Method, tap the keyboard icon to get the on-screen keyboard. Also, your device may have its own gesture which bring up the keyboard.

Use the Direct input modes for more intuitive touch-screen control. Use Simulated Touchpad Mode for finer control over the mouse.

Direct, Swipe Pan Method:
 - Control the mouse directly through touch.
 - Swipe to pan around.
 - Tapping makes the mouse click where you tapped.
 - Scroll events are sent between the two fingers where a two-finger swipe started.

Direct, Hold Pan Method:
 - Control the mouse directly through touch.
 - Long-tap to start pan mode.
 - Tapping makes the mouse click where you tapped.
 - Scroll events are sent between the two fingers where a two-finger swipe started.

Simulated Touchpad Method:
 - Use your screen like a touchpad.
 - Swipe to move the mouse pointer around.
 - Move mouse beyond edge of screen to pan.
 - Tapping makes the mouse click where the pointer is.
 - Scroll events are sent where the mouse pointer is located.

Single Handed Method:
 - Same as Direct, Swipe Pan Mode, except long-tap opens menu with choice of modes.
 - After choosing mode, swiping finger on screen performs selected gesture.
 - Lifting finger completes the gesture.

All Input Methods:
 - Left-click: Tap once.
 - Double-click: Double-tap.
 - Right-click: Tap-hold and tap with a second finger (anywhere else on screen).
 - Alternate Right-click: Use the \"Back\" button or gesture for your device.
 - Middle-click: Tap-hold and tap with two more fingers (anywhere else on screen).
 - Mouse-drag: Tap-hold-long and swipe.
 - Scroll-wheel: Two-finger drag up/down and left/right. Quick drag scrolls faster.
 - Zoom in/out: Pinch-zoom to control scaling.
 - Ctrl/Alt key: Menu->Ctrl/Alt buttons. Don't forget to toggle off when done!
 - Key combos: Menu->More->Send Keys.
 - Send text: Either type on the on-screen keyboard, or use Menu->More->Send Text."</string>
    <string name="error_failed_to_download_vv_http">Failed to download .vv file over HTTP. Perhaps your server is unreachable.</string>
    <string name="error_failed_to_download_vv_https">Failed to download .vv file over HTTPS. Perhaps your server cert is untrusted (expired or self-signed) or your server is unreachable.</string>
    <string name="error_failed_to_obtain_vv_content">Failed to obtain .vv file. Please download it again but this time, quickly open it from the Download folder in a File Manager.</string>
    <string name="error_failed_to_obtain_vv_file">Failed to find .vv file. Please download it again, but this time, try to open it from the Notification area or directly from the Browser if possible.</string>
    <string name="error_dialog_title">Error</string>
    <string name="info_dialog_title">Info</string>
    <string name="info_vm_launched_on_stand_by">Your VM was found powered off and has been started. Please try again in a couple of minutes. If you try too soon and get a connection failure, try again later.</string>
    <string name="error_no_vm_found_for_user">No available Virtual Machines for the given user.</string>
    <string name="error_no_such_vm_found_for_user">No Virtual Machine with the ID provided was found for the given user. Erase the ID to get a list of VMs.</string>
    <string name="error_no_vnc_support_yet">VNC display type not supported yet, but it is an upcoming feature. Thanks for your understanding!</string>
    <string name="error_not_connected_to_network">You do not appear to be connected to the Internet. Cannot continue without being connected!</string>
    <string name="error_ovirt_timeout">The connection to your VM timed out. Please check that the address of the node running your VM is correct, that it is accessible from your current network, and that no firewall is blocking the connection.</string>
    <string name="error_ovirt_auth_failure">Authentication failure. Please check the provided user and password.</string>
    <string name="error_ovirt_ssl_handshake_failure">SSL handshake failure. There is a problem with the server SSL certificate. If you are using a self-signed certificate, you need to (re)import your certificate authority.</string>
    <string name="error_pve_failed_to_authenticate">Failed to authenticate to Proxmox Virtual Environment. Please make sure you enter your username in user@realm format and that you password is correct.</string>
    <string name="error_pve_failed_to_parse_json">Failed to parse response from Proxmox Virtual Environment.</string>
    <string name="error_pve_vmid_not_numeric">VM ID not numeric. Please enter a numeric VM ID or leave empty to choose the VM from a list.</string>
    <string name="error_pve_api_unexpected_code">Unexpected response from Proxmox Virtual Environment: </string>
    <string name="error_pve_api_io_error">Connection to Proxmox Virtual Environment failed: </string>
    <string name="error_pve_null_data">Proxmox Virtual Environment returned null data.</string>
    <string name="error_pve_timeout_communicating">Timeout communicating with Proxmox Virtual Environment.</string>
    <string name="error_vm_lookup_failed">Could not find a virtual machine with the name specified assigned to your user. Please erase the VM name specified to see a list of VMs assigned to the user.</string>
    <string name="error_vv_download_timeout">Timeout downloading vv file.</string>
    <string name="message_please_wait">Please wait</string>
    <string name="message_please_install_bvnc">Please install &lt;a href="market://details?id=com.qihua.bVNC">bVNC&lt;/a> from Google Play to connect to the VNC console of this VM.</string>
    <string name="ssl_strict">Require common name to match cert (recommended)</string>
    <string name="usb">USB (plug in OTG cable first)</string>
    <string name="ad_donate_text0">The Pro version now has support for multi-factor SSH authentication. In addition, it supports the much requested Master Password feature that prevents unauthorized use and also encrypts all connection settings including passwords and SSH keys to guard against theft. Enable it from the main Menu. If the Menu button is missing, please long-tap the running apps button for the Menu.</string>
    <string name="ad_donate_text1">Tap here to support the project with a small donation by buying the Pro version.</string>
    <string name="ad_donate_text2">The Pro version allows you to disable this dialog and gives you access to additional features.</string>
    <string name="ad_donate_text3">If you would like to support the project further, follow the following links for links to client apps for: </string>
    <string name="ad_donate_text_rdp">The Pro version of aRDP now supports sound redirection!</string>
    <string name="ad_donate_text_spice"></string>
    <string name="address_caption">VNC Server</string>
    <string name="address_caption_hint">VNC Server</string>
    <string name="address_caption_hint_tunneled">VNC Server</string>
    <string name="address_caption_ssh">SSH Server</string>
    <string name="address_caption_ssh_hint">SSH Server</string>
    <string name="alt_check">Alt</string>
    <string name="ardp_app_name">QihuaRemote</string>
    <string name="arrow_down">Down Arrow</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="arrow_up">Up Arrow</string>
    <string name="aspice_app_name">aSPICE Pro</string>
    <string name="auto">Auto</string>
    <string name="auto_x_cancel">Cancel</string>
    <string name="immersive_mode_disable">Disable Immersive Mode</string>
    <string name="keep_screen_awake_enable">Keep Screen Awake</string>
    <string name="landscape_force">Force Landscape Orientation</string>
    <string name="search_connections">Search Connections</string>
    <string name="hide_connection_thumbnails">Hide Connection Thumbnails</string>
    <string name="show_only_connection_nicknames">Show Only Connection Nicknames</string>
</resources>